crates/mold_parser/src/snapshots/mold_parser__tests__insert_on_conflict_constraint.snap
---
source: crates/mold_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..146
  INSERT_STMT@0..146
    INSERT_KW@0..6 "INSERT"
    WHITESPACE@6..7 " "
    INTO_KW@7..11 "INTO"
    WHITESPACE@11..12 " "
    TABLE_REF@12..18
      IDENT@12..17 "users"
      WHITESPACE@17..18 " "
    INSERT_COLUMNS@18..29
      L_PAREN@18..19 "("
      IDENT@19..21 "id"
      COMMA@21..22 ","
      WHITESPACE@22..23 " "
      IDENT@23..27 "name"
      R_PAREN@27..28 ")"
      WHITESPACE@28..29 " "
    VALUES_CLAUSE@29..49
      VALUES_KW@29..35 "VALUES"
      WHITESPACE@35..36 " "
      VALUES_ROW@36..49
        L_PAREN@36..37 "("
        LITERAL@37..38
          INTEGER@37..38 "1"
        COMMA@38..39 ","
        WHITESPACE@39..40 " "
        LITERAL@40..47
          STRING@40..47 "'Alice'"
        R_PAREN@47..48 ")"
        WHITESPACE@48..49 " "
    ON_CONFLICT_CLAUSE@49..146
      ON_KW@49..51 "ON"
      WHITESPACE@51..52 " "
      CONFLICT_KW@52..60 "CONFLICT"
      WHITESPACE@60..61 " "
      ON_KW@61..63 "ON"
      WHITESPACE@63..64 " "
      CONSTRAINT_KW@64..74 "CONSTRAINT"
      WHITESPACE@74..75 " "
      IDENT@75..85 "users_pkey"
      WHITESPACE@85..86 " "
      DO_KW@86..88 "DO"
      WHITESPACE@88..89 " "
      UPDATE_KW@89..95 "UPDATE"
      WHITESPACE@95..96 " "
      DO_UPDATE@96..146
        SET_KW@96..99 "SET"
        WHITESPACE@99..100 " "
        SET_ITEM@100..121
          IDENT@100..104 "name"
          WHITESPACE@104..105 " "
          EQ@105..106 "="
          WHITESPACE@106..107 " "
          COLUMN_REF@107..121
            IDENT@107..115 "EXCLUDED"
            DOT@115..116 "."
            IDENT@116..120 "name"
            WHITESPACE@120..121 " "
        WHERE_KW@121..126 "WHERE"
        WHITESPACE@126..127 " "
        BINARY_EXPR@127..146
          COLUMN_REF@127..140
            IDENT@127..132 "users"
            DOT@132..133 "."
            IDENT@133..139 "active"
            WHITESPACE@139..140 " "
          EQ@140..141 "="
          WHITESPACE@141..142 " "
          LITERAL@142..146
            TRUE_KW@142..146 "true"
