crates/mold_parser/src/snapshots/mold_parser__tests__insert_on_conflict_target_where.snap
---
source: crates/mold_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..89
  INSERT_STMT@0..89
    INSERT_KW@0..6 "INSERT"
    WHITESPACE@6..7 " "
    INTO_KW@7..11 "INTO"
    WHITESPACE@11..12 " "
    TABLE_REF@12..18
      IDENT@12..17 "users"
      WHITESPACE@17..18 " "
    INSERT_COLUMNS@18..29
      L_PAREN@18..19 "("
      IDENT@19..21 "id"
      COMMA@21..22 ","
      WHITESPACE@22..23 " "
      IDENT@23..27 "name"
      R_PAREN@27..28 ")"
      WHITESPACE@28..29 " "
    VALUES_CLAUSE@29..49
      VALUES_KW@29..35 "VALUES"
      WHITESPACE@35..36 " "
      VALUES_ROW@36..49
        L_PAREN@36..37 "("
        LITERAL@37..38
          INTEGER@37..38 "1"
        COMMA@38..39 ","
        WHITESPACE@39..40 " "
        LITERAL@40..47
          STRING@40..47 "'Alice'"
        R_PAREN@47..48 ")"
        WHITESPACE@48..49 " "
    ON_CONFLICT_CLAUSE@49..89
      ON_KW@49..51 "ON"
      WHITESPACE@51..52 " "
      CONFLICT_KW@52..60 "CONFLICT"
      WHITESPACE@60..61 " "
      CONFLICT_TARGET@61..79
        L_PAREN@61..62 "("
        COLUMN_REF@62..64
          IDENT@62..64 "id"
        R_PAREN@64..65 ")"
        WHITESPACE@65..66 " "
        WHERE_KW@66..71 "WHERE"
        WHITESPACE@71..72 " "
        BINARY_EXPR@72..79
          COLUMN_REF@72..75
            IDENT@72..74 "id"
            WHITESPACE@74..75 " "
          GT@75..76 ">"
          WHITESPACE@76..77 " "
          LITERAL@77..79
            INTEGER@77..78 "0"
            WHITESPACE@78..79 " "
      DO_KW@79..81 "DO"
      WHITESPACE@81..82 " "
      NOTHING_KW@82..89 "NOTHING"
