crates/mold_parser/src/snapshots/mold_parser__tests__jsonb_contains.snap
---
source: crates/mold_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..52
  SELECT_STMT@0..52
    SELECT_KW@0..6 "SELECT"
    WHITESPACE@6..7 " "
    SELECT_ITEM_LIST@7..9
      SELECT_ITEM@7..9
        STAR_EXPR@7..9
          STAR@7..8 "*"
          WHITESPACE@8..9 " "
    FROM_CLAUSE@9..20
      FROM_KW@9..13 "FROM"
      WHITESPACE@13..14 " "
      TABLE_REF@14..20
        IDENT@14..19 "users"
        WHITESPACE@19..20 " "
    WHERE_CLAUSE@20..52
      WHERE_KW@20..25 "WHERE"
      WHITESPACE@25..26 " "
      BINARY_EXPR@26..52
        COLUMN_REF@26..31
          IDENT@26..30 "data"
          WHITESPACE@30..31 " "
        AT_GT@31..33 "@>"
        WHITESPACE@33..34 " "
        LITERAL@34..52
          STRING@34..52 "'{\"active\": true}'"
